Revert "added new art"
This reverts commit bb9cdca87e8a2540b07935e372dba92e847f97d7.

--- a/commissions.html
+++ b/commissions.html
@@ -442,8 +442,8 @@
                         alt="An illustration of the character 'Jacinthe' from the game 'Pokémon Legends: Z-A'. She is holding her hand up to her face and is winking and smiling. There are butterflies and flower petals surrounding her."
                       >
                       <img
-                        src="https://file.garden/aH6gV0OEQybcML-a/uicat-freebie-protected-intensity-DEFAULT-V2.png"
-                        alt="An illustration of uicat's (on discord) character."
+                        src="https://file.garden/aH6gV0OEQybcML-a/sophia-sugarbunnies-shielded-robust.png"
+                        alt="An illustration of the characters 'Sophia Cherbourg', 'Kurousa' and 'Shirousa' from the anime 'Sugarbunnies'. Both Shirousa and Sophia are waving and smiling. Kurousa has his paws close to his face and is winking. Behind them is a cake, batter, balloons, a sprinkle shaker and sprinkles."
                       >
                     </div>
 
