--- a/art.html
+++ b/art.html
@@ -71,6 +71,10 @@
               <h2>february</h2>
               <div id="02-2026" class="gallery-grid">
                 <img
+                  src="https://file.garden/aH6gV0OEQybcML-a/rainbow-thigh-up-protected-intensity-DEFAULT-V2.png"
+                  alt="An illustration of my rainbow themed character. She is smiling and waving."
+                >
+                <img
                   src="https://file.garden/aH6gV0OEQybcML-a/uicat-freebie-protected-intensity-DEFAULT-V2.png"
                   alt="An illustration of uicat's (on discord) character."
                 >
