--- a/commissions.html
+++ b/commissions.html
@@ -438,8 +438,8 @@
                         alt="An illustration of frenchiegirl's (on discord) original character. They are holding a hand back in one hand and have their other hand up to their face."
                       >
                       <img
-                        src="https://file.garden/aH6gV0OEQybcML-a/jacinthe-shielded-robust.png"
-                        alt="An illustration of the character 'Jacinthe' from the game 'Pokémon Legends: Z-A'. She is holding her hand up to her face and is winking and smiling. There are butterflies and flower petals surrounding her."
+                        src="https://file.garden/aH6gV0OEQybcML-a/rainbow-thigh-up-protected-intensity-DEFAULT-V2.png"
+                        alt="An illustration of my rainbow themed character. She is smiling and waving."
                       >
                       <img
                         src="https://file.garden/aH6gV0OEQybcML-a/uicat-freebie-protected-intensity-DEFAULT-V2.png"
