--- a/home.html
+++ b/home.html
@@ -52,6 +52,8 @@
             <div class="inner-inner-container bulletin-board" style="width: 100%; max-height: 213px;">
               <h2>bulletin board</h2>
               <div style="max-height: 138px; overflow-y: scroll;">
+                <p>20/02/26: added new art to the museum!</p>
+                <hr>
                 <p>19/02/26: added new art to the museum!</p>
                 <hr>
                 <p>18/02/26: added new art to the museum!</p>
@@ -224,7 +226,7 @@
           <div>
           <button style="border: none; background: none; cursor: grab;" onclick="copyText()" aria-label="A button that when clicked on, copies the text inside of the text box next to this button."><img src="assets/images/site/mintbunnies-link.gif" alt="An image of the 'mintbunnies neighbourhood' link button."/></button>
           <textarea id="link-text" label="A text box that contains code to link back to the 'mintbunnies neighbourhood' site through the image of the link button." disabled>
-<a href="http://minntibunni.art"><img src="http://minntibunni.art/assets/images/site/mintbunnies-link.gif" alt="mintbunnies neighbourhood" title="✧˖° mintbunnies neighbourhood ✧˖°"></a>
+<a href="https://minntibunni.art"><img src="https://minntibunni.art/assets/images/site/mintbunnies-link.gif" alt="mintbunnies neighbourhood" title="✧˖° mintbunnies neighbourhood ✧˖°"></a>
           </textarea>
           <script>
             function copyText(){
