--- a/commissions.html
+++ b/commissions.html
@@ -434,12 +434,12 @@
                     <h3 style="text-align: center;">thigh-up</h3>
                     <div class="gallery-grid">
                       <img
-                        src="https://file.garden/aH6gV0OEQybcML-a/frenchiegirl-freebie-shielded-robust.png"
-                        alt="An illustration of frenchiegirl's (on discord) original character. They are holding a hand back in one hand and have their other hand up to their face."
-                      >
-                      <img
                         src="https://file.garden/aH6gV0OEQybcML-a/rainbow-thigh-up-protected-intensity-DEFAULT-V2.png"
                         alt="An illustration of my rainbow themed character. She is smiling and waving."
+                      >
+                      <img
+                        src="https://file.garden/aH6gV0OEQybcML-a/sitting-protected-intensity-DEFAULT-V2.png"
+                        alt="An illustration of my original character. She is sitting in a bakery and is holding a tea cup."
                       >
                       <img
                         src="https://file.garden/aH6gV0OEQybcML-a/uicat-freebie-protected-intensity-DEFAULT-V2.png"
