updated comms page

--- a/commissions.html
+++ b/commissions.html
@@ -144,7 +144,7 @@
               <br />
               <p>
                 i'm also accepting commissions through
-                <a href="https://vgen.co/minntibunni">vgen</a> and
+                <a href="https://vgen.co/minntibunni">vgen</a> (please help me get verified!) and
                 <a href="https://kirke.social/minntibunni">kirke!</a>
               </p>
             </div>
@@ -176,20 +176,20 @@
                       soft style:
                       <br />
                       <br/>
-                      chibi: £10
+                      chibi: £10 / 1000 rbx wt
                       <br />
-                      half-body: £10
+                      half-body: £10 / 1000 rbx wt / 150k rhd
                       <br />
-                      thigh-up: £20
+                      thigh-up: £20 / 2000 rbx wt / 200k rhd
                       <br />
-                      full-body: £30
+                      full-body: £30 / 3000 rbx wt / 300k rhd
                       <br />
                     </p>
                     <br />
                     <ul>
                       <li>
                         payments are accepted through stripe (which accepts
-                        paypal)
+                        paypal), gamepasses and royale high
                       </li>
                       <br>
                       <p>for soft style commissions:</p>
@@ -198,7 +198,7 @@
                         adding another character is an additional 100% of the
                         base price.
                       </li>
-                      <li>adding a background scene will cost an extra £10.</li>
+                      <li>adding a background scene will cost an extra £10 / 1000 rbx wt.</li>
                     </ul>
                   </div>
                 </details>
@@ -489,11 +489,11 @@
                       <br />
                     </p>
                     <ol>
-                      <li>you pay a non-refundable deposit of 50% upfront.</li>
+                      <li>you pay a non-refundable deposit of 50% upfront. (100% upfront for roblox commissions)</li>
 
                       <li>i send you a heavily-watermarked sketch.</li>
 
-                      <li>you pay the remaining balance.</li>
+                      <li>you pay the remaining balance. (n/a for roblox commissions) </li>
 
                       <li>
                         i send you the finished piece though dropbox (in PNG
