--- a/home.html
+++ b/home.html
@@ -52,6 +52,8 @@
             <div class="inner-inner-container bulletin-board" style="width: 100%; max-height: 213px;">
               <h2>bulletin board</h2>
               <div style="max-height: 138px; overflow-y: scroll;">
+                <p>28/02/26: updated comms page!</p>
+                <hr>
                 <p>27/02/26: added new art to the museum!</p>
                 <hr>
                 <p>20/02/26: added new art to the museum!</p>
