--- a/art.html
+++ b/art.html
@@ -71,6 +71,10 @@
               <h2>february</h2>
               <div id="02-2026" class="gallery-grid">
                 <img
+                  src="https://file.garden/aH6gV0OEQybcML-a/eating-doughnut-chibi-protected-intensity-DEFAULT-V2.png"
+                  alt="An illustration of my original character drawn in a chibi style. She is holding a doughnut."
+                >
+                <img
                   src="https://file.garden/aH6gV0OEQybcML-a/sitting-protected-intensity-DEFAULT-V2.png"
                   alt="An illustration of my original character. She is sitting in a bakery and is holding a tea cup."
                 >
