--- a/commissions.html
+++ b/commissions.html
@@ -410,8 +410,8 @@
                         alt="An illustration of the mayor and the mintbunny Cherry Blossom drawn in a chibi style. They are playing on a set of swings."
                       >
                       <img
-                        src="https://file.garden/aH6gV0OEQybcML-a/mikuxrody-chibi-example-protected-intensity-DEFAULT-V2.jpg"
-                        alt="An illustration of the Vocaloid character 'Hatsune Miku' drawn in a chibi style. She is making a heart with her fingers."
+                        src="https://file.garden/aH6gV0OEQybcML-a/eating-doughnut-chibi-protected-intensity-DEFAULT-V2.png"
+                        alt="An illustration of my original character drawn in a chibi style. She is holding a doughnut."
                       >
                     </div>
 
