--- a/art.html
+++ b/art.html
@@ -64,10 +64,18 @@
               <h2>2026</h2>
               <p>inner sections of 2026:</p>
               <ul style="margin-top: 10px;">
+                <li><a href="#03-2026">march</a></li>
                 <li><a href="#02-2026">february</a></li>
                 <li><a href="#01-2026">january</a></li>
               </ul>
-          
+              
+              <h2>march</h2>
+              <div id="03-2026" class="gallery-grid">
+                <img
+                  src="https://file.garden/aH6gV0OEQybcML-a/another-chibi-hope-protected-intensity-DEFAULT-V2.png"
+                  alt="An illustration of my original character drawn in a chibi style. She is holding a bunny stuffed animal."
+                >
+              </div>
               <h2>february</h2>
               <div id="02-2026" class="gallery-grid">
                 <img
