--- a/commissions.html
+++ b/commissions.html
@@ -402,8 +402,8 @@
                     <h3 style="text-align: center">chibi</h3>
                     <div class="gallery-grid">
                       <img
-                        src="https://file.garden/aH6gV0OEQybcML-a/macne-nana-chibi-protected-intensity-DEFAULT-V2.jpg"
-                        alt="An illustration of the Vocaloid character 'Macne Nana' drawn in a chibi style. She is smiling and winking and holding up a peace sign."
+                        src="https://file.garden/aH6gV0OEQybcML-a/another-chibi-hope-protected-intensity-DEFAULT-V2.png"
+                        alt="An illustration of my original character drawn in a chibi style. She is holding a bunny stuffed animal."
                       >
                       <img
                         src="https://file.garden/aH6gV0OEQybcML-a/chibi-swinging-protected-intensity-DEFAULT-V2.jpg"
